--- a/EmployeeManagment/EmployeeManagment/appsettings.json
+++ b/EmployeeManagment/EmployeeManagment/appsettings.json
@@ -4,5 +4,9 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "MyKey": "Value of MyKey from appsettings.json",
+  "ConnectionStrings": {
+    "EmployeeDBConnection": "server=(localdb)\\MSSQLLocalDB;database=EmployeeDB;Trusted_Connection=true"
+  }
 }
