Seed Method added

--- a/EmployeeManagment/EmployeeManagment/appsettings.json
+++ b/EmployeeManagment/EmployeeManagment/appsettings.json
@@ -7,6 +7,7 @@
   "AllowedHosts": "*",
   "MyKey": "Value of MyKey from appsettings.json",
   "ConnectionStrings": {
-    "EmployeeDBConnection": "server=(localdb)\\MSSQLLocalDB;database=EmployeeDB;Trusted_Connection=true"
+   // "EmployeeDBConnection": "server=(localdb)\\MSSQLLocalDB;Database=EmployeeDB;Trusted_Connection=true" //Sql Express 2016 build in VS Nesto zaebava
+    "EmployeeDBConnection": "Server=DARKO-PC;Database=EmployeeDB;user id=Dare;password=usako756;" //Sql Server 2017
   }
 }
