--- a/EmployeeManagment/EmployeeManagment/appsettings.json
+++ b/EmployeeManagment/EmployeeManagment/appsettings.json
@@ -7,7 +7,8 @@
   "AllowedHosts": "*",
   "MyKey": "Value of MyKey from appsettings.json",
   "ConnectionStrings": {
-   // "EmployeeDBConnection": "server=(localdb)\\MSSQLLocalDB;Database=EmployeeDB;Trusted_Connection=true" //Sql Express 2016 build in VS Nesto zaebava
-    "EmployeeDBConnection": "Server=DARKO-PC;Database=EmployeeDB;user id=Dare;password=usako756;" //Sql Server 2017
+    // "EmployeeDBConnection": "server=(localdb)\\MSSQLLocalDB;Database=EmployeeDB;Trusted_Connection=true" //Sql Express 2016 build in VS Nesto zaebava
+    // "EmployeeDBConnection": "Server=DARKO-PC;Database=EmployeeDB;user id=Dare;password=usako756;", //Sql Server 2017 OD DOMA
+    "EmployeeDBConnection": "Server=.\\SQL2017;Database=EmployeeDB;user id=sa;password=eidaichi;" //Sql Server 2017 OD RABOTA
   }
 }
