--- a/EmployeeManagment/EmployeeManagment/web.config
+++ b/EmployeeManagment/EmployeeManagment/web.config
@@ -5,7 +5,7 @@
       <handlers>
         <add name="aspNetCore" path="*" verb="*" modules="AspNetCoreModuleV2" resourceType="Unspecified" />
       </handlers>
-      <aspNetCore processPath="C:\Program Files\dotnet\dotnet.exe" arguments="exec &quot;C:\Users\darko.gelevski\Desktop\Venket Core\Venket-Core\EmployeeManagment\EmployeeManagment\bin\Debug\netcoreapp2.2\EmployeeManagment.dll&quot;" stdoutLogEnabled="false" hostingModel="InProcess">
+      <aspNetCore processPath="C:\Program Files\dotnet\dotnet.exe" arguments="exec &quot;C:\Users\Darko\Desktop\Venket-Core\EmployeeManagment\EmployeeManagment\bin\Debug\netcoreapp2.2\EmployeeManagment.dll&quot;" stdoutLogEnabled="false" hostingModel="InProcess">
         <environmentVariables>
           <environmentVariable name="ASPNETCORE_ENVIRONMENT" value="Development" />
           <environmentVariable name="MyKey" value="Value of MyKey from Enviorment Variable" />
