Exception Pages added

--- a/EmployeeManagment/EmployeeManagment/web.config
+++ b/EmployeeManagment/EmployeeManagment/web.config
@@ -7,8 +7,9 @@
       </handlers>
       <aspNetCore processPath="C:\Program Files\dotnet\dotnet.exe" arguments="exec &quot;C:\Users\Darko\Desktop\Venket-Core\EmployeeManagment\EmployeeManagment\bin\Debug\netcoreapp2.2\EmployeeManagment.dll&quot;" stdoutLogEnabled="false" hostingModel="InProcess">
         <environmentVariables>
-          <environmentVariable name="ASPNETCORE_ENVIRONMENT" value="Development" />
+          <environmentVariable name="ASPNETCORE_ENVIRONMENT" value="Production" />
           <environmentVariable name="MyKey" value="Value of MyKey from Enviorment Variable" />
+          <environmentVariable name="COMPLUS_ForceENC" value="1" />
         </environmentVariables>
       </aspNetCore>
     </system.webServer>
